workflows/dropbox/app/styles/_global.scss
// removing forced scroll

html {
  overflow-y: auto !important;
}

// removing the footer

#page-full-footer {
  display: none !important;
}

// Responsive everything

#outer-frame {
  width: 90% !important;
  margin: 0 auto !important; // center the frame
  position: relative !important; // so the percentage based sizes would be inherited
  z-index: 2 !important; // some weird overlapping is happening with the user header
}

// Removing header when signed in

li#notification-feed-nav-link.top-level-nav-item {
  display: none !important; // Removing notifications
}

#page-header {
  width: 150px !important;
  left: auto !important;
  right: 5% !important;
  top: 0 !important;
  height: 40px !important;
  padding: 13px 0 !important;
  z-index: 5 !important;
  margin-top: 4px !important;
  margin-right: 5px !important;
  padding-top: 8px !important;
  border: none !important;
  position: fixed !important;
  // border-bottom: 1px solid $deepBlue-20 !important;
  @media screen and (max-width: 1005px) {
    position: fixed !important;
  }

  @media screen and (min-width: 1000px) {
    width: 400px !important;
    margin-top: 3px !important;
  }

  .account-header__avatar {

    img {
      transform: translateX(1px);
    }
  }
}

button.header-nav-link {
  height: 26px !important;
  width: 150px !important;
  text-overflow: ellipsis !important;
  white-space: nowrap !important;
  overflow: hidden !important;
  text-align: right !important;

  @media screen and (min-width: 1000px) {
    width: 400px !important;
  }
}

#inner-page-header {
  width: 90% !important; // setting user header to be responsive

  .main-skip-link {
    display: none !important;
  }
}
.top-level-nav-item:not(#header-account-menu) {
  display: none !important;
}
// From user dropdown menu keep logout
.account-dropdown {
  ul {
    li:not(:last-child) {
      display: none !important;
    }
  }
}

